Slight fix on alignment in guiding screen

--- a/src/pages/book-a-flight.scss
+++ b/src/pages/book-a-flight.scss
@@ -138,7 +138,7 @@
       }
 
       p {
-        margin: auto;
+        margin: 0;
         font-size: 18px;
         line-height: 34px;
         font-weight: bold;
